--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-dumbbell"></i> Workout Performance Tracker v1</h1>
-            <p>Gerencie seus treinos e acompanhe seu progresso</p>
+            <h1><i class="fas fa-dumbbell"></i> Workout Performance Tracker </h1>
+            <p>Seu App de treino e acompanhamento de progresso</p>
         </div>
 
         <div class="stats-grid" id="statsGrid">
