--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1><i class="fas fa-dumbbell"></i> Workout Performance Tracker </h1>
+            <h1><i class="fas fa-dumbbell"></i> WPT .:. Workout Performance Tracker </h1>
             <p>Seu App de treino e acompanhamento de progresso</p>
         </div>
 
