--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <!-- Header -->
         <div class="header">
             <div>
-                <h1>Performance Tracker</h1>
+                <h1>Performance Tracker App</h1>
                 <p>Seu aplicativo de treino e acompanhamento de progresso</p>
             </div>
             <div class="data-actions">
